--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,13 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   hive_generator: ^2.0.1
   build_runner: ^2.4.4
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true 
+  image_path: "assets/icon/daydo_icon.png"
 
 flutter:
   uses-material-design: true
