--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.8.1 <4.0.0'
+  sdk: '>=2.17.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -16,9 +16,14 @@ dependencies:
   hive_flutter: ^1.1.0
   intl: ^0.20.2
   table_calendar: ^3.0.9
+  timezone: ^0.9.1
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.6
+  flutter_local_notifications: ^15.1.1
+  image_picker: ^1.0.4
+  
+  
 
 dev_dependencies:
   flutter_test:
