--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_local_notifications: ^15.1.1
   image_picker: ^1.0.4
+  shared_preferences: ^2.2.3
   
   
 
